--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <section class="ticket-card" data-index="0">
         <div class="content">
           <div class="ticket-header">
-            <span class="name">福井 寿和 様</span>
+            <span class="name">西田 大樹 様</span>
             <span class="index number">1枚目</span>
           </div>
           <div class="ticket-main dashed-bottom">
@@ -110,7 +110,7 @@
               <div class="info-list">
                 <span class="name">前方エリア</span>
                 <span class="prefix ">入場券整理番号A</span>
-                <span class="reference "><span class="number">26</span>番</span>
+                <span class="reference "><span class="number">168p2</span>番</span>
                 <span class="price">¥11,000(税込)</span>
               </div>
               <div class="used-stamp">
@@ -257,7 +257,7 @@
           
           <div class="select-ticket-card dashed-top unused selected" data-index="0">
             <div class="select-ticket-header">
-              <p class="select-ticket-owner-name">福井 寿和 様</p>
+              <p class="select-ticket-owner-name">西田 大樹 様</p>
             </div>
             <div class="select-ticket-main">
               <div class="select-ticket-info">
@@ -269,7 +269,7 @@
                 <div class="select-ticket-info-list number">
                   <span class="select-ticket-name">前方エリア</span>
                   <span class="select-ticket-prefix ">入場券整理番号A</span>
-                  <span class="select-ticket-reference-number "><span class="number">26</span>番</span>
+                  <span class="select-ticket-reference-number "><span class="number">168</span>番</span>
                 </div>
                 <div class="select-ticket-used">
                   <img src="./static/image/edsdk_v3_st_ticket_used_stamp.png" class="select-ticket-used-stamp">
