--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <div class="info-list">
                 <span class="name">前方エリア</span>
                 <span class="prefix ">入場券整理番号A</span>
-                <span class="reference "><span class="number">168p2</span>番</span>
+                <span class="reference "><span class="number">168</span>番</span>
                 <span class="price">¥11,000(税込)</span>
               </div>
               <div class="used-stamp">
