--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             
             <div class="mogiri-date-time">
               <p class="mogiri-date">
-                <span class="mogiri-date-text number">11/17</span>
-                <span class="mogiri-weekday">(<span class="">月</span>)</span>
+                <span class="mogiri-date-text number">12/9</span>
+                <span class="mogiri-weekday">(<span class="">火</span>)</span>
               </p>
               <p class="mogiri-times number">
                 <span class="mogiri-open">
